--- a/libvirt/apps/docker/cloud_init.cfg
+++ b/libvirt/apps/docker/cloud_init.cfg
@@ -11,10 +11,19 @@ hostname: ${hostname}
 fqdn: ${fqdn}
 manage_etc_hosts: true
 
+groups:
+    - docker
+
 users:
     - name: felix
       shell: /bin/bash
       sudo: ALL=(ALL) NOPASSWD:ALL
+      ssh_authorized_keys:
+        - ${ssh_id}
+
+    - name: docker
+      primary_group: docker
+      shell: /bin/bash
       ssh_authorized_keys:
         - ${ssh_id}
 
