--- a/infrastructure/docker/containers/traefik/traefik.yml
+++ b/infrastructure/docker/containers/traefik/traefik.yml
@@ -13,3 +13,7 @@ api:
 entryPoints:
   web:
     address: :80
+  %{ for name, port in additional_entrypoints }
+  ${name}:
+    address: ":${port}"
+  %{ endfor ~}
