--- a/infrastructure/docker/containers/jellyfin/ingress.yml
+++ b/infrastructure/docker/containers/jellyfin/ingress.yml
@@ -4,7 +4,17 @@ http:
       entryPoints:
         - web
       rule: "Host(`jellyfin.local`)"
+      middlewares:
+        - jellyfin-ipwhitelist
       service: jellyfin
+
+  middlewares:
+    jellyfin-ipwhitelist:
+      ipWhiteList:
+        sourceRange:
+          - "127.0.0.1/32"
+          - "192.168.0.0/16"
+          - "10.0.0.0/8"
 
   services:
     jellyfin:
