Configure nextcloud properly

--- a/infrastructure/libvirt/apps/docker/cloud_init.cfg
+++ b/infrastructure/libvirt/apps/docker/cloud_init.cfg
@@ -18,3 +18,22 @@ users:
       shell: /bin/bash
       ssh_authorized_keys:
         - ${ssh_id}
+
+
+disk_setup:
+  /dev/vdb:
+    table_type: 'mbr'
+    layout: [100]
+    overwrite: False
+
+fs_setup:
+  - label: data
+    filesystem: ext4
+    device: /dev/vdb1
+    overwrite: False
+
+mounts:
+    - [ "/dev/vdb.1", "/opt/containers" ]
+    %{~ for mount in mounts ~}
+    - [ ${join(",", formatlist("\"%s\"", mount))} ]
+    %{~ endfor ~}
