--- a/infrastructure/libvirt/apps/docker/cloud_init.cfg
+++ b/infrastructure/libvirt/apps/docker/cloud_init.cfg
@@ -6,6 +6,13 @@ hostname: ${hostname}
 fqdn: ${fqdn}
 manage_etc_hosts: true
 
+%{~ if length(packages) != 0 ~}
+packages:
+    %{~ for package in packages ~}
+    - ${package}
+    %{~ endfor ~}
+%{~ endif ~}
+
 users:
     - name: felix
       shell: /bin/bash
