--- a/infrastructure/docker/containers/nextcloud/ingress.yml
+++ b/infrastructure/docker/containers/nextcloud/ingress.yml
@@ -5,6 +5,8 @@ http:
         - web
       rule: "Host(`${fqdn}`)"
       service: nextcloud
+      tls:
+        certResolver: letsencrypt
 
   services:
     nextcloud:
