Keep internal services available via http for now

--- a/infrastructure/docker/containers/nextcloud/ingress.yml
+++ b/infrastructure/docker/containers/nextcloud/ingress.yml
@@ -1,8 +1,10 @@
+# TODO Redirect only ssl enabled hosts from http to https
+
 http:
   routers:
     to-nextcloud:
       entryPoints:
-        - web
+        - websecure
       rule: "Host(`${fqdn}`)"
       service: nextcloud
       middlewares:
