--- a/infrastructure/libvirt/apps/docker/cloud_init.cfg
+++ b/infrastructure/libvirt/apps/docker/cloud_init.cfg
@@ -44,3 +44,12 @@ mounts:
     %{~ for mount in mounts ~}
     - [ ${join(",", formatlist("\"%s\"", mount))} ]
     %{~ endfor ~}
+
+%{~ if length(files) != 0 ~}
+write_files:
+    %{~ for file in files ~}
+    - path: ${file.path}
+      content: |
+        ${indent(8, file.content)}
+    %{~ endfor ~}
+%{~ endif ~}
