--- a/infrastructure/docker/containers/tvheadend/ingress.yml
+++ b/infrastructure/docker/containers/tvheadend/ingress.yml
@@ -5,16 +5,8 @@ http:
         - web
       rule: "Host(`${fqdn}`)"
       middlewares:
-        - tvheadend-ipwhitelist
+        - lan-whitelist
       service: tvheadend
-
-  middlewares:
-    tvheadend-ipwhitelist:
-      ipWhiteList:
-        sourceRange:
-          - "127.0.0.1/32"
-          - "192.168.0.0/16"
-          - "10.0.0.0/8"
 
   services:
     tvheadend:
