--- a/infrastructure/libvirt/files/snapraid-runner.conf
+++ b/infrastructure/libvirt/files/snapraid-runner.conf
@@ -16,12 +16,12 @@ maxsize = 5000
 
 [email]
 ; when to send an email, comma-separated list of [success, error]
-sendon = success,error
+sendon = error
 ; set to false to get full programm output via email
 short = true
 subject = [SnapRAID] Status Report:
-from =
-to =
+from = ${from_mail}
+to = ${to_mail}
 ; maximum email size in KiB
 maxsize = 500
 
@@ -37,6 +37,6 @@ password =
 
 [scrub]
 ; set to true to run scrub after sync
-enabled = false
+enabled = true
 percentage = 12
 older-than = 10
