--- a/infrastructure/docker/containers/jellyfin/ingress.yml
+++ b/infrastructure/docker/containers/jellyfin/ingress.yml
@@ -5,16 +5,8 @@ http:
         - web
       rule: "Host(`${fqdn}`)"
       middlewares:
-        - jellyfin-ipwhitelist
+        - lan-whitelist
       service: jellyfin
-
-  middlewares:
-    jellyfin-ipwhitelist:
-      ipWhiteList:
-        sourceRange:
-          - "127.0.0.1/32"
-          - "192.168.0.0/16"
-          - "10.0.0.0/8"
 
   services:
     jellyfin:
