Add timeline package for Cockpit

--- a/images/hypervisor/playbook.yml
+++ b/images/hypervisor/playbook.yml
@@ -37,6 +37,7 @@
           - 'cockpit-storaged'
           - 'cockpit-packagekit'
           - 'cockpit-machines'
+          - 'cockpit-pcp'
         state: present
         default_release: "{{ansible_distribution_release}}-backports"
 
