Enable traefik access log

--- a/infrastructure/docker/containers/traefik/traefik.yml
+++ b/infrastructure/docker/containers/traefik/traefik.yml
@@ -2,6 +2,8 @@ providers:
   file:
     directory: "/etc/traefik/hosts"
 
+accessLog: {}
+
 global:
   checkNewVersion: false
   sendAnonymousUsage: false
