--- a/infrastructure/docker/containers/duplicati/Dockerfile
+++ b/infrastructure/docker/containers/duplicati/Dockerfile
@@ -4,6 +4,19 @@ RUN set -ex; \
     \
     apt-get update; \
     apt-get install -y --no-install-recommends \
-        mariadb-client \
+        ca-certificates curl gnupg lsb-release \
+    ; \
+    rm -rf /var/lib/apt/lists/*
+
+RUN curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+RUN echo \
+      "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian \
+      $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list
+
+RUN set -ex; \
+    \
+    apt-get update; \
+    apt-get install -y --no-install-recommends \
+        docker-ce-cli \
     ; \
     rm -rf /var/lib/apt/lists/*
