Do not regenerate bcrypt hash

--- a/infrastructure/docker/vm-internal/internal-auth.yml
+++ b/infrastructure/docker/vm-internal/internal-auth.yml
@@ -4,5 +4,5 @@ http:
       basicAuth:
         users:
           %{ for user, password in users }
-          - "${user}:${bcrypt(password)}"
+          - "${user}:${password}"
           %{ endfor }
