--- a/infrastructure/libvirt/apps/docker/cloud_init.cfg
+++ b/infrastructure/libvirt/apps/docker/cloud_init.cfg
@@ -6,6 +6,8 @@ hostname: ${hostname}
 fqdn: ${fqdn}
 manage_etc_hosts: true
 
+timezone: Europe/Berlin
+
 %{~ if length(packages) != 0 ~}
 packages:
     %{~ for package in packages ~}
