--- a/images/hypervisor/playbook.yml
+++ b/images/hypervisor/playbook.yml
@@ -19,6 +19,12 @@
      - name: admin_mail
 
   tasks:
+    - name: Set timezone to Europe/Berlin
+      community.general.timezone:
+        name: Europe/Berlin
+        # Documentation recommends restarting cron
+      notify: Restart cron
+  
     - name: Add Backports required for Cockpit
       ansible.builtin.apt_repository:
         repo: deb http://deb.debian.org/debian "{{ansible_distribution_release}}-backports" main
@@ -210,6 +216,11 @@
         state: present
 
   handlers:
+    - name: Restart cron
+      service:
+        name: cron
+        state: restarted
+        
     - name: Restart libvirtd
       service:
         name: libvirtd
