--- a/images/backup/files/mdadm.conf
+++ b/images/backup/files/mdadm.conf
@@ -19,4 +19,4 @@ MAILADDR root
 
 # definitions of existing MD arrays
 
-#ARRAY /dev/md0  metadata=1.2 UUID=66801b74:da0e868f:461c49d3:f984166d name=debian:0
+ARRAY /dev/md/0  metadata=1.2 UUID=b52ff0ec:b62c12f7:99af12b2:56525a61 name=backup:0
