Generate Backup Scripts

--- a/infrastructure/libvirt/apps/docker/cloud_init.cfg
+++ b/infrastructure/libvirt/apps/docker/cloud_init.cfg
@@ -27,7 +27,7 @@ users:
       shell: /bin/bash
       ssh_authorized_keys:
         - ${ssh_id}
-
+        - ${ssh_backup_id}
 
 disk_setup:
   /dev/vdb:
