--- a/infrastructure/docker/internal/secrets.yml
+++ b/infrastructure/docker/internal/secrets.yml
@@ -2,6 +2,10 @@ nextcloud:
     db:
         user_password: ENC[AES256_GCM,data:wDkwy2RvKTnlIRpYuhpQ9GIaFaztUsUXbHYv21RY,iv:VGziznNTwJzru8SodNf7iedf7WH67PDDNMWYd0kSWBI=,tag:UsNKnzS4MTUNRMcCKWEtCg==,type:str]
         root_password: ENC[AES256_GCM,data:aXUkxWbhcbKlqC3FmhrgcfCC0cXkRNNCtrY1K8k+,iv:bGdljyvS9nomhmGQxz1JC2Pypduv9SX4zgZZqdknWXc=,tag:6t3eCsHmuowO65yYJiU88A==,type:str]
+gitea:
+    db:
+        user_password: ENC[AES256_GCM,data:LusWamwgTrD5gag7J0BcxuTxLSY=,iv:zuTafRqCqENZsVE5ITlo8m/g+fEgEkbddVbDz4v56q0=,tag:ccYNeXAfq+MjNSvdTN9Mww==,type:str]
+        root_password: ENC[AES256_GCM,data:81HrsZHzin/58mk3ojCEVBa4SNw=,iv:NyWK6FBj2gmxhHbBkjUOOwP6pwTiirC9LpbQdxJSk4I=,tag:98nIZIeF3LAQ2guJee6Lsw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,8 +21,8 @@ sops:
             YU93dDh6MlBRRkdKSmpYNnhNaU1vdDgK3H7o8/duIT8vJBqVsJmnt0dIQZ9+wVOu
             9cHboXb+ZXpuo19X+UjkWcPiZhf0FxEjhHvZlPmyEPUy29FucHTYaw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-26T13:08:43Z"
-    mac: ENC[AES256_GCM,data:K1rV84ehFQRL0Q4F9pPEDrhX30+6pKSgrc3Ro3F0/rLidlHp+gtRtRvPtatMGpPrTUMkB2kSDMyLCbSReo9x0u3OVRtx+hwI4RxUQ/H0XQCTNl+8pbz5sSjlhpTftQvjPqJS/8+fXTAyZslNkmIyTzE2zLNFzlpq1530atgMPzI=,iv:yDd8CAvSv18alsNTFRNfQqF4Vg4PqjSnS9Hn2eYB2b4=,tag:XFYnP53ANxf6w9kn4vV17A==,type:str]
+    lastmodified: "2022-09-09T17:05:35Z"
+    mac: ENC[AES256_GCM,data:vgbZHNti53oaZ8om0eVqJ5OMT0RsO+Jw8sdAvtCLlZiV55W5DAkb9+BZ3SOtbf7nrNL1eDfo8RJtP/aeNd+ZXCcrAg3ZvLq057Z72kdYrsz5565JzxtNTHgHsisPlOD+XE4m5Q+PHrY42tl7RO3MCWkpzKE3W6fHWQM9m//6xQo=,iv:JxQRR3fSVhYY/DBzokO9y/1geaA5VYT+QFa1F8t92IU=,tag:ArSAxOJoH5ZHTbDd/jnkRw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
