--- a/infrastructure/docker/web/secrets.yml
+++ b/infrastructure/docker/web/secrets.yml
@@ -6,6 +6,13 @@ nextcloud:
     db:
         user_password: ENC[AES256_GCM,data:bA2H0qJ7rQoqm9cjRk4KDA8SneXr9sfaNBZctNki,iv:06p3zYH6AM2pbUpnCEz8SQe0bIavwpvq8DwH0+2vzqE=,tag:EI/lppRsKybBOUGGTsIUYg==,type:str]
         root_password: ENC[AES256_GCM,data:fEBfUL03kNLB6tc6NLZdDQ==,iv:M3ZdPXwexIugF2NWvkjngKVcdZSh6n5e60Fs9b+DMMU=,tag:AqjhGCj34DfxfUVgpxFOqQ==,type:str]
+authentik:
+    db:
+        user_password: ENC[AES256_GCM,data:ua80nN266dld6KO2/6yGpX57gB9YHCQifzvSbLKl,iv:7j8ej+BlglGcG4Bxozm78VX5z3MYkHN0Lf0JPjdXAFQ=,tag:cNTAwPpIOWAe4Hyq7O8vIA==,type:str]
+    secret: ENC[AES256_GCM,data:uPz0Ta9usaAn4ZvAuCSkfFa2ak4=,iv:Q8mEd7EIwWOuEYwNEiAsNSZQ36d/gxywrnzhz4FqEzg=,tag:2qrvJ2gg/ORZjD5QXsp3Gg==,type:str]
+    geoip:
+        license: ENC[AES256_GCM,data:qGahM8X1HsGOnhnhdXigrQ==,iv:rTbW0v6AYbDKBWM/6A/5R5KO38EM0sW9Wi6cRCYSdXM=,tag:bqgRg46cptpNLwJGrrJVIQ==,type:str]
+        account: ENC[AES256_GCM,data:VDUsoYOg,iv:/EK93HVB0zRsrrjVPg0CRUbjmOJgf7Nng575GRSmAhY=,tag:+vZvulqxeCp5J9xof3D08Q==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +28,8 @@ sops:
             UnhaWk5ZclpuTzlUcFBFWEFrRDJIQUkKTr7S4OuNW1zJaFDsUaQwTGHgAQ8JoWtc
             HFz+P9CoDXI/Q6/GOp7cN5qiiuacUH462w12n1w84xwcg09xW67VYw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-08-26T13:05:50Z"
-    mac: ENC[AES256_GCM,data:uGxKJYe9UIP8hOPj2ksmcRaxrZfbUy8Gc3a11Y6bX+PTBXON0hKvtRZJOIgNILvemZbn/gGjxDWbBgHUkjPk0Ps4b+BrZlvEHmXsPzaWlw10l/2AC57+pXIgTF/dLkLdOr9Skg6+SgJRfrAgKElWA8Jwp7J4WhzIIPE28iAYwd8=,iv:voW2MCIcu8GcU49gBiw/vDaVWsnP832V27PEjBMdkxM=,tag:RsDT8uL9hVVMMbcQTrvhIw==,type:str]
+    lastmodified: "2022-09-22T18:48:16Z"
+    mac: ENC[AES256_GCM,data:hLUXx7MskdGntMetkrV3tqg10VL9ZtT9blqpXu+w1KjdndMSCfsHyeseFvA7zHHV5+Mt/eZy5HvEvVXDB4gqy1SJpUof3oQXHhAjTQpQSwS7DNTxv+eK8QrQrnEIPZG/Vvn+DuhBBS8wcXHQsrxaI9i9Sz4cauvNl6BEdOw91eI=,iv:XKR3Gkv7Q015XYOj/lH5pxKk7GtM31/nyaZLdVXSPiw=,tag:pEZ1exnISU/1Ptda6R+TEg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
