Missing disks should lead to failure

--- a/infrastructure/libvirt/apps/docker/cloud_init.cfg
+++ b/infrastructure/libvirt/apps/docker/cloud_init.cfg
@@ -41,6 +41,9 @@ fs_setup:
     device: /dev/vdb1
     overwrite: False
 
+# Override this so missing disks lead to failure!
+mount_default_fields: [none, none, "auto","defaults,x-systemd.requires=cloud-init.service", "0", "2"]
+
 mounts:
     - [ "/dev/vdb.1", "/opt/containers" ]
     %{~ for mount in mounts ~}
